--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Oscar Castillo Home</title>
+		<title>ANDREAMENACHO Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Oscar Castillo</strong> <span>Home</span></a>
+						<a href="index.html" class="logo"><strong>ANDREAMENACHO</strong> <span>Home</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -49,12 +49,11 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hola, mi nombre es Oscar Castillo</h1>
+								<h1>Hola, mi nombre es ANDREAMENACHORODRIGUEZ</h1>
 							</header>
 							<div class="content">
-								<p>Ing. Mecatrónico y Emprendedor en Educación y tecnología. <br />
-									Consultor de empresas en gestión de proyectos, gestión comercial,<br /> 
-									marketing digital, gestión organizacional y en educación virtual.</p>
+								<p>Hola soy estudiante de Arquitectura de Interiores en el Instituto Toulouse Lautrec <br />
+									Amante de los animales.</p>
 								<ul class="actions">
 									<li><a href="https://www.linkedin.com/in/oscarcastillon/" class="button next scrolly">Mi Linkedin</a></li>
 								</ul>
@@ -72,7 +71,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="sobremi.html" class="link">Sobre mi</a></h3>
+										<h3><a href="sobremi.html" class="link">Conoceme</a></h3>
 										<p>Formación y experiencia profesional</p>
 									</header>
 								</article>
